# DevelopIQ

./: .gitignore  README.md  package-lock.json  package.json
agentic-backend/: package-lock.json  package.json
codebook_agent/: .env.example  __init__.py  langgraph.json  package-lock.json  pyproject.toml  setup.py  toc.json
codebook_agent/qdrant_storage/: meta.json
codebook_agent/src/: __init__.py
codebook_agent/src/RAG/: __init__.py  codebook_retriever.py  queries.py  query_models.py
codebook_agent/src/agent/: __init__.py  config_file.py  extract_and_index_graph.py  graph.py  query_graph.py
codebook_agent/src/agent_graphs/: __init__.py  configurations.py  extractor_graph.py  models.py  querier_graph.py  queries.py  results.json
codebook_agent/src/datasets/: building_requirements.py
codebook_agent/src/evals/: dataset_creation.py  langchain_eval.py  patronus_main.py  prompts.py
codebook_agent/src/qdrant_wrapper/: __init__.py  qdrant_base.py  qdrant_ingestor.py  qdrant_rechunk.py  qdrant_retriever.py  queries.py  rag_strategies.py
codebook_agent/src/utils/: __init__.py  alp_scraper.py  codebook_helpers.py
codebook_agent/tests/integration_tests/: test_graph.py
codebook_agent/tests/unit_tests/: test_configuration.py
python-agents/: pyproject.toml
python-agents/guide_creator_flow/: Dockerfile  README.md  main.py  pyproject.toml  toc.json
python-agents/guide_creator_flow/codebook_db/: chroma.sqlite3
python-agents/guide_creator_flow/src/codebook-flow/: alp.py  alp_html_processor.py  instructions.py  main.py  test.html  toc.json
python-agents/guide_creator_flow/src/codebook-flow/crews/extraction_crew/: extraction_crew.py
python-agents/guide_creator_flow/src/codebook-flow/crews/extraction_crew/config/: agents.yaml  tasks.yaml
python-agents/guide_creator_flow/src/codebook-flow/evals/: __init__.py  municipal_code_extraction.py  permitted_use_matrix.py
python-agents/guide_creator_flow/src/codebook-flow/listeners/: README.md  agent_event_listener.py  tool_event_listener.py
python-agents/guide_creator_flow/src/codebook-flow/tools/: section_extractor.py  section_extractor_test.py  table_of_contents_tools.py
python-agents/guide_creator_flow/src/codebook_flow/: alp_scraper.py  codebook_helpers.py  instructions.py  main.py  topic_definitions.py
python-agents/guide_creator_flow/src/codebook_flow/codebook_db/e2bde5aa-256b-452f-bddf-8bb8daaba68c/: index_metadata.pickle
python-agents/guide_creator_flow/src/codebook_flow/crews/development_standards_crew/: development_standards_crew.py
python-agents/guide_creator_flow/src/codebook_flow/crews/development_standards_crew/config/: tasks.yaml
python-agents/guide_creator_flow/src/codebook_flow/crews/extraction_crew/: extraction_crew.py
python-agents/guide_creator_flow/src/codebook_flow/crews/search_crew/: search_crew.py  search_hints.py
python-agents/guide_creator_flow/src/codebook_flow/html_storage/: text.json
python-agents/guide_creator_flow/src/codebook_flow/rag/: codebook_retriever.py  rag.py  test_rag.py
python-agents/guide_creator_flow/src/codebook_flow/tools/: permitted_use_tools.py  table_of_contents_tools.py  toc_tools.py
(+292 files in other folders)
