[project]
name = "guide_creator_flow"
version = "0.1.0"
description = "guide_creator_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai (>=0.105.0,<0.106.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "agentops (>=0.4.2,<0.5.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
]

[project.scripts]
kickoff = "guide_creator_flow.main:kickoff"
plot = "guide_creator_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
